HA-Kap-6: Update #005

--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
 	<p>
 		<a href="http://validator.w3.org/check?uri=http%3A%2F%2Fmichaelniewiara.cloudcontrolled.com"><img alt="XHTML 1.0 Valid"
 			src="http://www.w3.org/Icons/valid-xhtml10" /></a> <a
-			href="http://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Fmichaelniewiara.cloudcontrolled.com&profile=css2"><img alt="CSS 2 Valid"
+			href="http://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Fmichaelniewiara.cloudcontrolled.com&amp;profile=css2"><img alt="CSS 2 Valid"
 			src="http://www.w3.org/Icons/valid-css2-blue" /></a>
 	</p>
 </body>
