HA-Kap-6: Update #007

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Insert title here</title>
+<title>Übersicht aller XHTML 1.0 Strict Elemente</title>
 <link type="text/css" rel="stylesheet" href="css/style.css" />
 </head>
 <body>
