HA-Kap-7: Update #003

--- a/ha-kap-7/index.html
+++ b/ha-kap-7/index.html
@@ -10,13 +10,14 @@
 	<h1>Barrierefreies Suchformular</h1>
 	<form action="http://de.wikipedia.org/wiki/Spezial:Suche">
 		<fieldset>
-			<legend>Suchen</legend>
-			<label for="search">test</label>
-			<input type="text"   name="search" value="" />
-			<input type="submit" name="go" value="Artikel"/>
-			<input type="submit" name="fulltext" value="Volltext" />
+			<legend>In Wikipedia suchen</legend>
+			<label for="search">Suchbegriff</label><br />
+			<input id="search" type="text"  name="search" value="" size="50" /><br />
+			<input class="button" type="submit" name="go" value="Artikel"/>
+			<input class="button" type="submit" name="fulltext" value="Volltext" />
 		</fieldset>
-	<p><a href="http://wave.webaim.org/report#/michaelniewiara.cloudcontrolled.com/ha-kap-7/" title="Put your title here"><img height="32" width="88" src="http://www.w3.org/WAI/wcag2AAA" alt="Level Triple-A conformance, W3C WAI Web Content Accessibility Guidelines 2.0">
+	</form>
+	<p><a href="http://wave.webaim.org/report#/michaelniewiara.cloudcontrolled.com/ha-kap-7/index.html" title="Put your title here"><img height="32" width="88" src="http://www.w3.org/WAI/wcag2AAA" alt="Level Triple-A conformance, W3C WAI Web Content Accessibility Guidelines 2.0">
 </a></p>
 	</p>
 </body>
