--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
 	<div>
           <h2>Aufgabe: Mit CSS formatierte Tabelle aller "XHTML 1.0 strict"-Elemente</h2>
           <p class="lead">In dieser Hausaufgabe sollte eine XHTML-1.0-strict-Seite erstellt werden, die in tabellarischer Form alle 77 Elemente zeigt. Zu jedem dieser Elemente sollte neben der Beschreibung auch angegeben werden, ob es sich um ein Block- oder Inline-Element sowie semantisches HTML handelt.</p>
-          <p><a href="table.html">Zur Aufgabe</a></p>
+          <p><a href="ha-kap-6/">Zur Aufgabe</a></p>
 	</div>
 	<div>
           <h2>Aufgabe: Barrierefreies Suchformular</h2>
           <p class="lead">In dieser Hausaufgabe sollte f&uuml;r die deutsche Wikipedia ein barrierefreies Webformular f&uuml;r die Suche nach Artikeln entwickelt werden. Das Formular sollte den Richtlinien nach WCAG 2.0 AAA und Section 508 entsprechen.</p>
-          <p><a href="form.html">Zur Aufgabe</a></p>
+          <p><a href="ha-kap-7">Zur Aufgabe</a></p>
 	</div>
       </div>
     </div>
