--- a/ha-kap-6/index.html
+++ b/ha-kap-6/index.html
@@ -501,9 +501,9 @@
 		</tbody>
 	</table>
 	<p>
-		<a href="http://validator.w3.org/check?uri=http%3A%2F%2Fmichaelniewiara.cloudcontrolled.com"><img alt="Valid XHTML 1.0 Strict"
+		<a href="http://validator.w3.org/check?uri=http%3A%2F%2Fmichaelniewiara.cloudcontrolled.com%2Fha-kap-6"><img alt="Valid XHTML 1.0 Strict"
 			src="http://www.w3.org/Icons/valid-xhtml10" /></a> <a
-			href="http://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Fmichaelniewiara.cloudcontrolled.com&amp;profile=css2"><img alt="Valid CSS 2"
+			href="http://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Fmichaelniewiara.cloudcontrolled.com%2Fha-kap-6&amp;profile=css2"><img alt="Valid CSS 2"
 			src="http://www.w3.org/Icons/valid-css2-blue" /></a>
 	</p>
 </body>
